Fix: Tweaked max-width of text to ensure it reliably legible breakpoint.

--- a/src/scss/pages/_sample-landing-page.scss
+++ b/src/scss/pages/_sample-landing-page.scss
@@ -25,6 +25,7 @@
 
 #hero--text p:nth-child(2) {
   opacity: .8;
+  max-width: 35ch;
   margin-top: var(--hero_text_margin_between_big_and_small_text);
   font-family: "Roboto", sans-serif;
   font-weight: 400;
